# jourst

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
.github/workflows/: packages.yml  release.yml
migrations/2023-06-29-092935_create_todo/: up.sql
src/: args.rs  helpers.rs  main.rs  schema.rs
src/db/: connection.rs  migration.rs  mod.rs
src/models/: file.rs  mod.rs  todo.rs
src/operations/: mod.rs
src/operations/file/: mod.rs  open_file.rs  write_file.rs
src/operations/folder/: create_directory.rs  is_directory_exists.rs  mod.rs  read_directory.rs
src/repositories/: mod.rs  todo_repository.rs
tests/: integration_test.rs
