[package]
name = "jourst"
version = "0.1.0"
edition = "2021"
authors = ["Yalın Pala <yalinpala@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
dotenv = "0.15.0"
serde = { versoion = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
