[package]
name = "jourst"
version = "0.1.0"
edition = "2021"
authors = ["Yalın Pala <yalinpala@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
dotenv = "0.15.0"
serde = { versoion = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
diesel = { version = "2.0", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
