[package]
name = "jourst"
version = "0.8.0"
edition = "2021"
authors = ["Yalın Pala <yalinpala@proton.me>"]
description = "Simple command line todo tool"
license = "MIT"
repository = "https://github.com/yplog/jourst"
homepage = "https://github.com/yplog/jourst"
readme = "README.md"
keywords = ["todo", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
diesel = { version = "2.2.3", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
colored = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
